# cdx-cj-nppm_dev_cpp_pixel_2_ray

./: CMakeLists.txt  DEVELOPER_WORKFLOW.md  NEXT_STEPS.md  README.md  SESSION_DIALOG_LOG.md  SETUP_AND_TROUBLESHOOTING.md  cj.txt
src/: FrameMath.cpp  FrameMath.h  InteractionLogic.cpp  InteractionLogic.h  MainWindow.cpp  MainWindow.h  PixelToRayWidget.cpp  PixelToRayWidget.h  main.cpp
tests/: FrameMathTests.cpp  InteractionLogicTests.cpp
